# nix-bench

./: .gitignore  Cargo.toml  Makefile.toml  README.md  build.rs  default.nix  flake.nix  lib.nix  update-tables.py
.cargo/: config.toml
.config/: nextest.toml
crates/: Cargo.toml
crates/.cargo/: config.toml
crates/.config/: nextest.toml
crates/nix-bench-agent/: Cargo.toml
crates/nix-bench-agent/src/: benchmark.rs  bootstrap.rs  command.rs  config.rs  error.rs  gc.rs  grpc.rs  lib.rs  logging.rs  logs.rs  main.rs  metrics.rs  nvme.rs  results.rs
crates/nix-bench-agent/tests/: agent_integration.rs
crates/nix-bench-common/: Cargo.toml  build.rs
crates/nix-bench-common/src/: agent_config.rs  defaults.rs  lib.rs  metrics.rs  proto.rs  resource_kind.rs  run_result.rs  stats.rs  status.rs  tags.rs  tls.rs
crates/nix-bench-coordinator/: Cargo.toml
crates/nix-bench-coordinator/src/: config.rs  lib.rs  log_buffer.rs  main.rs  state.rs  wait.rs
crates/nix-bench-coordinator/src/aws/: account.rs  cleanup.rs  cleanup_util.rs  context.rs  ec2.rs  error.rs  grpc_client.rs  iam.rs  mod.rs  resource_kind.rs  s3.rs  scanner.rs  tags.rs
crates/nix-bench-coordinator/src/aws/ec2/: instance.rs  mod.rs  operations.rs  security_group.rs  types.rs
crates/nix-bench-coordinator/src/aws/grpc_client/: channel.rs  log_client.rs  mod.rs  status_poller.rs  streaming.rs
crates/nix-bench-coordinator/src/aws/resource_guard/: builder.rs  executor.rs  guard.rs  mod.rs  registry.rs  types.rs
crates/nix-bench-coordinator/src/orchestrator/: benchmark.rs  cleanup.rs  engine.rs  events.rs  init.rs  mod.rs  monitoring.rs  progress.rs  results.rs  types.rs  user_data.rs
crates/nix-bench-coordinator/src/state/: cleanup.rs  cli.rs  crud.rs  db.rs  mod.rs  queries.rs  types.rs
crates/nix-bench-coordinator/src/tui/: app.rs  input.rs  log_capture.rs  mod.rs  theme.rs  ui.rs
crates/nix-bench-coordinator/src/tui/app/: event_loop.rs  grpc_polling.rs  lifecycle.rs  log_buffer.rs  mod.rs  mouse.rs  state.rs
crates/nix-bench-coordinator/src/tui/widgets/: instance_detail.rs  instance_list.rs  mod.rs
crates/nix-bench-coordinator/tests/: agent_e2e_integration.rs  aws_e2e_integration.rs  aws_ec2_integration.rs  aws_iam_integration.rs  aws_s3_integration.rs  aws_test_helpers.rs  grpc_integration.rs
crates/nix-bench-coordinator/tests/test_utils/: mod.rs
crates/nix-bench-ec2/: Cargo.toml
crates/nix-bench-ec2/src/: config.rs  main.rs  orchestrator.rs  state.rs
crates/nix-bench-ec2/src/aws/: cloudwatch.rs  ec2.rs  logs.rs  mod.rs  s3.rs
crates/nix-bench-ec2/src/tui/: app.rs  events.rs  mod.rs  ui.rs
crates/nix-bench-ec2/src/tui/widgets/: aggregate_stats.rs  instance_detail.rs  instance_list.rs  mod.rs
crates/nix-bench-ec2/tests/: aws_integration.rs  e2e_integration.rs  state_integration.rs
crates/nix-bench-proto/: Cargo.toml  build.rs
crates/nix-bench-proto/src/: lib.rs
crates/nix-bench-test-utils/: Cargo.toml
crates/nix-bench-test-utils/src/: aws.rs  db.rs  lib.rs  tls.rs
proto/: nix_bench.proto
src/: aws_context.rs  lib.rs  metrics.rs  orchestrator.rs  state.rs  stats.rs  testing.rs  tls.rs
src/agent/: benchmark.rs  config.rs  grpc.rs  logs.rs  metrics.rs  mod.rs  nvme.rs  results.rs
src/aws/: cloudwatch.rs  ec2.rs  grpc_client.rs  iam.rs  logs.rs  mod.rs  s3.rs
src/orchestrator/: init.rs  mod.rs  progress.rs  types.rs
src/tui/: app.rs  log_capture.rs  mod.rs  ui.rs
src/tui/widgets/: aggregate_stats.rs  instance_list.rs
