[package]
name = "nix-bench"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/lovesegfault/nix-bench"
description = "Nix build benchmarking toolkit with EC2 coordinator and agent"

[[bin]]
name = "nix-bench-coordinator"
path = "src/bin/coordinator.rs"
required-features = ["coordinator"]

[[bin]]
name = "nix-bench-agent"
path = "src/bin/agent.rs"
required-features = ["agent"]

[features]
default = ["coordinator"]
coordinator = [
    "dep:aws-sdk-ec2",
    "dep:aws-sdk-iam",
    "dep:aws-sdk-sts",
    "dep:ratatui",
    "dep:crossterm",
    "dep:tokio-util",
    "dep:futures",
    "dep:tui-logger",
    "dep:log",
    "dep:sqlx",
    "dep:directories",
    "dep:comfy-table",
    "dep:base64",
    "dep:reqwest",
    "dep:tonic",
    "dep:prost",
    "dep:tokio-stream",
    "dep:throbber-widgets-tui",
    "dep:tui-scrollview",
    "dep:unicode-truncate",
    "dep:rustls",
]
agent = [
    "dep:nix",
    "dep:tonic",
    "dep:prost",
    "dep:tokio-stream",
    "dep:tokio-util",
    "dep:rustls",
]

[dependencies]
# Core async runtime
tokio = { version = "1", features = ["full"] }

# AWS SDK (shared)
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-cloudwatch = "1"
aws-sdk-cloudwatchlogs = "1"
aws-sdk-s3 = "1"

# AWS SDK (coordinator-only)
aws-sdk-ec2 = { version = "1", optional = true }
aws-sdk-iam = { version = "1", optional = true }
aws-sdk-sts = { version = "1", optional = true }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v7"] }

# TUI (coordinator-only)
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.29", features = ["event-stream"], optional = true }
futures = { version = "0.3", optional = true }
tui-logger = { version = "0.17", features = ["tracing-support"], optional = true }
log = { version = "0.4", optional = true }

# State management (coordinator-only) - sqlx with SQLite for async database access
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"], optional = true }
directories = { version = "6", optional = true }
comfy-table = { version = "7", optional = true }

# Utilities (coordinator-only)
base64 = { version = "0.22", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"], optional = true }

# System utilities (agent-only)
nix = { version = "0.30", features = ["fs", "mount"], optional = true }

# gRPC (coordinator + agent)
tonic = { version = "0.13", features = ["tls-ring"], optional = true }
prost = { version = "0.13", optional = true }
tokio-stream = { version = "0.1", features = ["sync"], optional = true }
async-stream = "0.3"

# Retry with exponential backoff
backon = { version = "1", features = ["tokio-sleep"] }

# TLS crypto provider (agent needs explicit rustls for CryptoProvider init)
rustls = { version = "0.23", default-features = false, features = ["ring", "std"], optional = true }

# TLS certificate generation (coordinator + agent)
rcgen = { version = "0.13", features = ["x509-parser"] }
pem = "3"
rand = "0.8"

# Unicode string width (for TUI)
unicode-width = "0.2"

# Cancellation support (shared, optional for coordinator TUI features)
tokio-util = { version = "0.7", features = ["rt"], optional = true }

# TUI widgets (coordinator-only)
throbber-widgets-tui = { version = "0.8", optional = true }
tui-scrollview = { version = "0.5", optional = true }
unicode-truncate = { version = "1.0", optional = true }

[build-dependencies]
tonic-build = "0.13"

[dev-dependencies]
tempfile = "3"
uuid = { version = "1", features = ["v7"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-cloudwatch = "1"
aws-sdk-s3 = "1"
aws-sdk-ec2 = "1"
aws-sdk-iam = "1"
aws-sdk-sts = "1"
base64 = "0.22"
urlencoding = "2"
proptest = "1"
