[workspace]
resolver = "2"
members = [
    "crates/nix-bench-proto",
    "crates/nix-bench-common",
    "crates/nix-bench-agent",
    "crates/nix-bench-coordinator",
    "crates/nix-bench-test-utils",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/lovesegfault/nix-bench"

# Shared dependency versions for consistency across workspace
[workspace.dependencies]
# Core async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# AWS SDK
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
aws-sdk-ec2 = "1"
aws-sdk-iam = "1"
aws-sdk-sts = "1"

# gRPC
tonic = { version = "0.14", features = ["tls-ring"] }
tonic-prost = "0.14"
tonic-prost-build = "0.14"
prost = "0.14"
async-stream = "0.3"

# TLS
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen = { version = "0.14", features = ["x509-parser"] }
pem = "3"
rand = "0.9"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v7"] }
backon = { version = "1", features = ["tokio-sleep"] }

# TUI (coordinator-only)
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
futures = "0.3"
tui-logger = { version = "0.18", features = ["tracing-support"] }
throbber-widgets-tui = "0.10"
tui-scrollview = "0.6"
unicode-width = "0.2"
unicode-truncate = "2"

# State management (coordinator-only)
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
directories = "6"
comfy-table = "7"

# HTTP (coordinator-only)
base64 = "0.22"
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }

# Testing
tempfile = "3"
proptest = "1"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
panic = "abort"
