[package]
name = "nix-bench-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Benchmark agent that runs on EC2 instances"

[dependencies]
tokio.workspace = true
aws-config.workspace = true
aws-sdk-cloudwatch.workspace = true
aws-sdk-cloudwatchlogs = "1"
aws-sdk-s3.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true

# System utilities
nix = { version = "0.30", features = ["fs", "mount"] }

[dev-dependencies]
tempfile = "3"
uuid = { version = "1", features = ["v7"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-cloudwatch = "1"
aws-sdk-s3 = "1"
