[package]
name = "nix-bench-common"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared types and utilities for nix-bench (no AWS dependencies)"

[dependencies]
# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# TLS certificate generation
rcgen.workspace = true
rand.workspace = true

# Unique identifiers
uuid.workspace = true

# Derive macros
strum.workspace = true
derive_more.workspace = true

# Optional tonic integration for TlsConfig methods
tonic = { workspace = true, optional = true }

# Optional init helpers
rustls = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

[features]
default = []
# Enable tonic-specific TlsConfig methods (identity, ca_certificate, etc.)
tonic-tls = ["tonic"]
# Enable shared init helpers (rustls crypto provider, tracing subscriber)
init = ["rustls", "tracing", "tracing-subscriber"]
