[package]
name = "nix-bench-ec2"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "EC2 instance benchmarking coordinator with TUI dashboard"

[dependencies]
tokio.workspace = true
aws-config.workspace = true
aws-sdk-ec2.workspace = true
aws-sdk-cloudwatch.workspace = true
aws-sdk-s3.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true

# TUI
ratatui = "0.29"
crossterm = { version = "0.29", features = ["event-stream"] }
tokio-util = "0.7"
futures = "0.3"

# State management
rusqlite = { version = "0.37", features = ["bundled"] }
directories = "6"

# Utilities
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
uuid = { version = "1", features = ["v7"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-ec2 = "1"
aws-sdk-s3 = "1"
base64 = "0.22"
