[package]
name = "nix-bench-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Protocol buffer definitions for nix-bench agent-coordinator communication"

[dependencies]
prost.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
nix-bench-common = { path = "../nix-bench-common" }

[build-dependencies]
tonic-prost-build.workspace = true
